--- a/src/template.html
+++ b/src/template.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Pokeboo</title>
+    <link rel="icon" href="./assets/images/pikachu.png" />
   </head>
   <body class="bg-gradient-to-r from-lime-100 via-teal-200 to-cyan-200">
     <pokemon-navigation></pokemon-navigation>
