Add feature and fix bug
make img display pokemon more better
fix search and filter button

--- a/src/template.html
+++ b/src/template.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokeboo</title>
-    <link rel="icon" href="./assets/images/pikachu.png" />
+    <link rel="icon" href="./assets/images/pikachu.svg" />
   </head>
   <body class="bg-gradient-to-r from-lime-100 via-teal-200 to-cyan-200">
     <pokemon-navigation></pokemon-navigation>
